TEXT AND TITLE!!! WE ALMOST THERE

--- a/index.html
+++ b/index.html
@@ -27,63 +27,67 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/bananabay4.jpg" data-position="left center"><img src="images/bananabay4.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h2>Tasty Banana Bay</h2>
+							<p>Happy Birthday baba! I appreciate everything you do and love you! -Jayden</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/puppybruno.jpg"><img src="images/puppybruno.jpg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+							<h2>Bruno's New Family</h2>
+							<p>Happy Birthday Baba! I hope you enjoy the new year! -Thomas Woo</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/mnb.jpg" data-position="top center"><img src="images/mnb.jpg" alt="" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<h2>Making Some Spam Musubi</h2>
+							<p>
+								Happy 49th Birthday
+								爸爸. I hope you enjoy your cake and I love you. Thank you for everything you do for me like cutting fruit and 
+								getting me Krispy Kreme donuts. I'm glad I get to spend your birthday at home with you and the whole family this year. Love, Nikki
+							</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/lastyearbday.jpg"><img src="images/lastyearbday.jpg" alt="" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+							<h2>Last Year's Birthday</h2>
+							<p></p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/japandumplinggood.jpg" data-position="top center"><img src="images/japandumplinggood.jpg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<h2>Japan Trip</h2>
+							<p>I want to go again sometime!</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/sleep.jpg"><img src="images/sleep.jpg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<h2>Content Sleep</h2>
+							<p></p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/hongkongcafe.jpg"><img src="images/hongkongcafe.jpg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+							<h2>Best Breakfast in Hong Kong</h2>
+							<p>The eggs and toast tasted so good.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/family.jpg"><img src="images/family.jpg" alt="" /></a>
-							<h2>Gravida quis varius enim</h2>
+							<h2></h2>
 							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/family2.jpg"><img src="images/family2.jpg" alt="" /></a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+							<h2>3 Pigs, 1 Monkey, and 1 Rabbit</h2>
+							<p></p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/thewholesquad.jpg"><img src="images/thewholesquad/10.jpg" alt="" /></a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+							<h2>The Woo Family</h2>
+							<p></p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/birdcook.jpg"><img src="images/birdcook.jpg" alt="" /></a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
+							<h2>"Please don't eat me!"</h2>
+							<p>peep peep peep -Merlin</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/brunocute.jpg"><img src="images/brunocute.jpg" alt="" /></a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+							<h2>"I smell food..."</h2>
+							<p>woof woof woof woof bark boof -Bruno</p>
 						</article>
 					</section>
 
