Thomas New Text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<article>
 							<a class="thumbnail" href="images/puppybruno.jpg"><img src="images/puppybruno.jpg" alt="" /></a>
 							<h2>Bruno's New Family</h2>
-							<p>Happy Birthday Baba! I hope you enjoy the new year! -Thomas Woo</p>
+							<p>Happy Birthday Baba! I hope you enjoy your new year! I love you! -Thomas Woo</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/mnb.jpg" data-position="top center"><img src="images/mnb.jpg" alt="" /></a>
